# Winhance

./: .editorconfig  .gitignore  CONTRIBUTING.md  Claude_Chat.md  README.md  RELEASE-NOTES.md  phase3_build_output.txt  phase3_clean_build.txt  phase3_csharp_warnings.txt  phase3_dotnet_full.txt  phase3_dotnet_warnings.txt  phase3_python_errors.txt  phase3_rust_warnings.txt  pyproject.toml
src/: Cargo.toml
src/Winhance.Core/: Winhance.Core.csproj
src/Winhance.Core/Features/AdvancedTools/Interfaces/: IWimUtilService.cs
src/Winhance.Core/Features/AdvancedTools/Models/: ImageDetectionResult.cs  ImageFormatInfo.cs  WimUtilConfiguration.cs
src/Winhance.Core/Features/Agents/Interfaces/: IAgentOrchestrationService.cs
src/Winhance.Core/Features/Agents/Models/: AgentTask.cs
src/Winhance.Core/Features/Common/Constants/: FeatureDefinitions.cs  ScriptPaths.cs
src/Winhance.Core/Features/Common/Enums/: CancellationReason.cs  DialogType.cs  ImportOption.cs  LogLevel.cs  PowerShellStreamType.cs  WindowState.cs
src/Winhance.Core/Features/Common/Events/: IDomainEvent.cs  IEventBus.cs  ISubscriptionToken.cs  PowerPlanChangedEvent.cs
src/Winhance.Infrastructure/: Winhance.Infrastructure.csproj
src/Winhance.Infrastructure/Features/ErrorRecovery/: SmartErrorRecoverySystem.cs
src/Winhance.Infrastructure/Tests/Integration/: DITest.cs
src/Winhance.WPF/: App.xaml.cs
src/nexus_ai/: __init__.py  config.py
src/nexus_ai/core/: __init__.py  agents.py  ai_providers.py  backup_system.py  doc_automation.py  gpu_accelerator.py  logging_config.py
src/nexus_ai/indexer/: __init__.py  hyper_indexer.py
src/nexus_ai/organization/: __init__.py  transaction_manager.py
src/nexus_ai/tools/: __init__.py  file_classifier.py  model_relocator.py  realtime_organizer.py  smart_filemanager.py  space_analyzer.py
src/nexus_cli/: __init__.py  main.py
src/nexus_core/: Cargo.toml
src/nexus_core/benches/: indexer_bench.rs
src/nexus_core/src/: lib.rs
src/nexus_core/src/ffi/: mod.rs
src/nexus_core/src/indexer/: content_hasher.rs  metadata_extractor.rs  mft_reader.rs  mod.rs  usn_journal.rs
src/nexus_core/src/search/: mod.rs  tantivy_engine.rs
src/nexus_core/src/watcher/: mod.rs
src/nexus_mcp/: __init__.py  __main__.py  server.py
(+715 files in other folders)
