[package]
name = "nexus_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Ultra-fast file indexing core for NexusFS"

[lib]
name = "nexus_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Search
tantivy.workspace = true

# File System
walkdir.workspace = true
notify.workspace = true
globset.workspace = true

# Windows APIs for MFT/USN access
windows.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true

# Python bindings
pyo3.workspace = true

# Hashing
xxhash-rust.workspace = true
sha2.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Date/Time
chrono.workspace = true

# UUID
uuid.workspace = true

# Additional
parking_lot = "0.12"
dashmap = "6.0"
rayon = "1.10"
memmap2 = "0.9"
num_cpus = "1.16"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[[bench]]
name = "indexer_bench"
harness = false
